Add greet-api call from client